[FIX] Contrast fixed for h1 text that didn't have pagetitle class.

--- a/mods/trunk/themes/smooth/styles/smooth.css
+++ b/mods/trunk/themes/smooth/styles/smooth.css
@@ -1004,9 +1004,9 @@ table.admin div#content1 div.tabcontent div.cbox {background: transparent}
 
 /***** Wiki *****/
 
-h1 a.pagetitle,
-h1 a.pagetitle:visited,
-h1 a.pagetitle:hover {
+h1 a,
+h1 a:visited,
+h1 a:hover {
 	color: #fff;
 	text-decoration: none}
 	
